# proyecto-sece

./: .env.example  .gitignore  README.md  compose.yml  pyproject.toml
.github/workflows/: deploy.yml  tests.yml
alembic/: env.py
alembic/versions/: a46af76e7054_initial.py
app/: main.py
app/api/: __init__.py
app/api/v1/: auth.py  citas.py  consultas.py  medicos.py  pacientes.py  recetas.py  usuarios.py
app/core/: config.py  database.py  deps.py  security.py
app/models/: __init__.py  base.py  cita.py  consulta.py  enums.py  medicamento_receta.py  medico.py  paciente.py  receta.py  signos_vitales.py  usuario.py
app/repositories/: cita.py  consulta.py  medico.py  paciente.py  receta.py  signos_vitales.py  usuario.py
app/schemas/: auth.py  cita.py  consulta.py  medico.py  paciente.py  receta.py  signos_vitales.py  usuario.py
app/scripts/: seed_admin.py
app/templates/: base.html  dashboard.html  login.html
app/templates/citas/: create.html  edit.html  list.html
app/templates/consultas/: create.html  detail.html  receta.html  signos.html
app/templates/medicos/: create.html  list.html
app/templates/pacientes/: create.html  detail.html  edit.html  list.html
app/templates/usuarios/: create.html  list.html
app/tests/: conftest.py  test_auth.py  test_citas.py  test_consultas.py  test_health.py  test_pacientes.py  test_recetas.py
app/web/: __init__.py  auth.py  citas.py  consultas.py  deps.py  medicos.py  pacientes.py  templates.py  usuarios.py
